--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY = 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
